Fixed encoding problem + Pretty forms

--- a/WebConference-web/src/main/webapp/src/app/app.component.html
+++ b/WebConference-web/src/main/webapp/src/app/app.component.html
@@ -1,2 +1,21 @@
-<router-outlet></router-outlet>
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <p style="color: white; font-weight: bold; text-align: center"> Our  Logo <br> Here </p>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
+</body>
+</html>
+
 
