--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<h1>Homepage</h1>
-<button (click)="gotoRegister()">Register</button>
-<button (click)="gotoLogin()">Login</button>
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
+  <button (click)="gotoRegister()" type="button" class="btn btn-default">Register</button>
+  <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button>
+</body>
+</html>
