Register Form Validation

--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -2,7 +2,15 @@
 <html>
 <head></head>
 <body>
-  <button (click)="gotoRegister()" type="button" class="btn btn-default">Register</button>
-  <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button>
+  <div class="container">
+    <br>
+    <br>
+    <p>A few inspirational words about our organization and why you should join us...</p>
+    <button (click)="gotoRegister()" type="button" class="btn btn-default">Register</button>
+    <br>
+    <br>
+    <p>Oh? Already have an account? Well, then...</p>
+    <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button>
+  </div>
 </body>
 </html>
