--- a/WebConference-web/src/main/webapp/src/app/app.component.html
+++ b/WebConference-web/src/main/webapp/src/app/app.component.html
@@ -5,7 +5,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <p style="color: white; font-weight: bold; text-align: center"> Our  Logo <br> Here </p>
+        <img src="../../images/logo.png" style="max-height: 65px;">
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -17,5 +17,3 @@
   <router-outlet></router-outlet>
 </body>
 </html>
-
-
