--- a/WebConference-web/src/main/webapp/src/app/app.component.html
+++ b/WebConference-web/src/main/webapp/src/app/app.component.html
@@ -1,2 +1,19 @@
-<router-outlet></router-outlet>
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <img src="../../images/logo.png" style="max-height: 65px;">
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
 
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
+</body>
+</html>
