--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<h1>Homepage</h1>
-<button (click)="gotoRegister()">Register</button>
-<button (click)="gotoLogin()">Login</button>
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
+  <div class="container">
+    <br>
+    <br>
+    <p>A few inspirational words about our organization and why you should join us...</p>
+    <button (click)="gotoRegister()" type="button" class="btn btn-default">Register</button>
+    <br>
+    <br>
+    <p>Oh? Already have an account? Well, then...</p>
+    <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button>
+    <button (click)="gotoRegisterConference()" type="button" class ="btn btn-default">AddConf</button>
+  </div>
+</body>
+</html>
