--- a/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.css
@@ -1,3 +1,156 @@
+body {
+  background: #e9e9e9;
+  color: #666666;
+  font-family: 'RobotoDraft', 'Roboto', sans-serif;
+  font-size: 14px;
+  height: 950px;
+}
+
+/* Pen Title */
+.pen-title {
+  padding: 50px 0;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.pen-title h1 {
+  margin: 0px;
+  font-size: 48px;
+  font-weight: 300;
+}
+
+/* Container */
+.container {
+  position: relative;
+  max-width: 460px;
+  margin: 0 auto;
+  height: 950px;
+}
+
+/* Card */
+.card {
+  position: relative;
+  background: white;
+  border-radius: 5px;
+  padding: 60px 0 40px 0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+.card:first-child {
+  background: #fafafa;
+  height: 10px;
+  border-radius: 5px 5px 0 0;
+  margin: 0 10px;
+  padding: 0;
+}
+.card .title {
+  position: relative;
+  border-left: 5px solid #ed2553;
+  margin: 0 0 35px;
+  padding: 10px 0 10px 50px;
+  color: #ed2553;
+  font-size: 32px;
+  text-transform: uppercase;
+}
+.card .input-container {
+  position: relative;
+  margin: 0 60px 50px;
+}
+.card .input-container input {
+  outline: none;
+  z-index: 1;
+  position: relative;
+  background: none;
+  width: 100%;
+  height: 60px;
+  border: 0;
+  color: #212121;
+  font-size: 24px;
+  font-weight: 400;
+}
+.card .input-container input:focus ~ label {
+  color: #9d9d9d;
+  transform: translate(-12%, -50%) scale(0.75);
+}
+.card .input-container input:valid ~ label {
+  color: #9d9d9d;
+  transform: translate(-12%, -50%) scale(0.75);
+}
+.card .input-container label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #757575;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 60px;
+  transition: 0.2s ease;
+}
+.card .input-container .bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: gray;
+  width: 100%;
+  height: 1px;
+}
+
+.card .button-container {
+  margin: 0 60px;
+  text-align: center;
+}
+.card .button-container button {
+  outline: 0;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  background: 0;
+  width: 240px;
+  border: 2px solid #e3e3e3;
+  padding: 20px 0;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.card .button-container button span {
+  position: relative;
+  z-index: 1;
+  color: lightgray;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.card .button-container button span:hover{
+  color: gray;
+}
+
+/* Card Alt */
+.card.alt {
+  position: absolute;
+  top: 40px;
+  right: -70px;
+  border-radius: 50%;
+  padding: 0;
+}
+.card.alt .toggle {
+  position: relative;
+  background: #ed2553;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  color: white;
+  font-size: 58px;
+  line-height: 140px;
+  text-align: center;
+}
+
+.card.alt .toggle:before {
+  content: '\f040';
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+}
+
 .center_div{
   width: 25%;
 }
@@ -13,3 +166,5 @@
 #failure{
   display: none;
 }
+input::-webkit-datetime-edit{ color: transparent; }
+input:focus::-webkit-datetime-edit{ color: gray;}
