--- a/WebConference-web/src/main/webapp/src/app/login/login.component.html
+++ b/WebConference-web/src/main/webapp/src/app/login/login.component.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
-  <style type="text/css">
-    .center_div{
-      width:25%;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Material Login Form</title>
+  <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <!--<link rel="stylesheet" href="login.component.css">-->
 </head>
+
 <body>
-<div class="container center_div">
-  <form>
-    <div class="form-group">
-      <label for="inputUsername">Username</label>
-      <input class="form-control" id="inputUsername" #username>
-    </div>
-    <div class="form-group">
-      <label for="inputPassword">Password</label>
-      <input type="password" class="form-control" id="inputPassword" #password>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox"> Remember me</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+
+<div class="login-title">
+  <h1>Conference Login Form</h1>
 </div>
+<div class="container">
+  <div class="card"></div>
+  <div class="card">
+    <h1 class="title">Login</h1>
+    <form>
+      <div class="input-container">
+        <input type="text" id="username" required="required" #username/>
+        <label for="username">Username</label>
+        <div class="bar"></div>
+      </div>
+      <div class="input-container">
+        <input type="password" id="password" required="required" #password/>
+        <label for="password">Password</label>
+        <div class="bar"></div>
+      </div>
+      <div class="button-container">
+        <button type="submit" class="btn btn-primary"><span>Go</span></button>
+      </div>
+      <div class="footer"><a href="#">Forgot your password?</a></div>
+    </form>
+  </div>
+
+  <div class="card alt">
+    <div class="toggle"></div>
+  </div>
+</div>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
 </body>
 </html>
+
+
+<!--<div class="checkbox">-->
+  <!--<label><input type="checkbox"> Remember me</label>-->
+<!--</div>-->
