--- a/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.html
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.html
@@ -5,13 +5,12 @@
   <title>Material Login Form</title>
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-  <!--<link rel="stylesheet" href="conference-register.component.css">-->
 </head>
 
 <body>
 
 <div class="pen-title">
-  <h1>Register Conference</h1>
+  <h1>Create a Conference</h1>
 </div>
 <div class="container">
   <div class="card"></div>
