--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
-<html>
-<head></head>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Material Login Form</title>
+  <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <!--<link rel="stylesheet" href="login.component.css">-->
+  <!--<link rel="stylesheet" href="style.css">-->
+</head>
+
 <body>
-  <div class="container">
-    <br>
-    <br>
-    <p>A few inspirational words about our organization and why you should join us...</p>
-    <button (click)="gotoRegister()" type="button" class="btn btn-default">Register</button>
-    <br>
-    <br>
-    <p>Oh? Already have an account? Well, then...</p>
-    <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button>
-    <button (click)="gotoRegisterConference()" type="button" class ="btn btn-default">AddConf</button>
+<div class="home-title">
+  <h1>Welcome to the Conference</h1>
 </div>
+
+<div id="add-conference">
+  <div class="button-container">
+    <button (click)="gotoRegisterConference()" type="button" class ="btn btn-default">Add Conference</button>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="card"></div>
+  <div class="card">
+    <h1 class="title">Login</h1>
+    <form>
+      <div class="input-container">
+        <input type="text" id="username" required="required" #username/>
+        <label for="username">Username</label>
+        <div class="bar"></div>
+      </div>
+      <div class="input-container">
+        <input type="password" id="password" required="required" #password/>
+        <label for="password">Password</label>
+        <div class="bar"></div>
+      </div>
+      <div class="button-container">
+        <button type="submit" class="btn btn-primary"><span>Go</span></button>
+      </div>
+      <div (click)="gotoRegister()" class="footer"><a>Don't have an account? Register now</a></div>
+    </form>
+  </div>
+
+  <div class="card alt">
+    <div class="toggle"></div>
+  </div>
+</div>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
 </body>
 </html>
+
+
+<!--<div class="checkbox">-->
+<!--<label><input type="checkbox"> Remember me</label>-->
+<!--</div>-->
