--- a/WebConference-web/src/main/webapp/src/app/user/user-register/user-register.component.html
+++ b/WebConference-web/src/main/webapp/src/app/user/user-register/user-register.component.html
@@ -5,7 +5,6 @@
   <title>Material Login Form</title>
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-  <!--<link rel="stylesheet" href="user-register.component.css">-->
 </head>
 
 <body>
@@ -41,6 +40,24 @@
       <div class="button-container">
         <button (click)="register(name.value, username.value, email.value, password.value)"><span>Go</span></button>
       </div>
+
+      <!--<div id="invalid-email" class="alert alert-danger">-->
+        <!--<strong>Invalid email format.</strong>-->
+      <!--</div>-->
+      <!--<div id="invalid-password" class="alert alert-danger">-->
+        <!--<strong>The password should contain at least 6 characters.</strong>-->
+      <!--</div>-->
+      <!--<div id="success">-->
+        <!--<div class="alert alert-success">-->
+          <!--<strong>Your account was successfully created.</strong>-->
+        <!--</div>-->
+        <!--<br>-->
+        <!--<p>Do you want to <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button> right now?</p>-->
+      <!--</div>-->
+      <!--<div id="failure" class="alert alert-danger">-->
+        <!--<strong>This username is already taken. Please choose another one.</strong>-->
+      <!--</div>-->
+
     </form>
   </div>
 
@@ -48,6 +65,7 @@
     <div class="toggle"></div>
   </div>
 </div>
+
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body>
