--- a/WebConference-web/src/main/webapp/src/app/home/home.component.css
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.css
@@ -9,7 +9,7 @@ body {
 /*Title*/
 .home-title {
   float: left;
-  margin-top: 170px;
+  margin-top: 30px;
   margin-left: 220px;
   padding: 50px 0;
   text-align: center;
@@ -21,159 +21,9 @@ body {
   font-weight: 600;
 }
 
-/* Container */
-.container {
-  position: absolute;
-  max-width: 460px;
-  /*  margin: 0 auto;*/
-  float: right;
-  top: 200px;
-  right: 300px;
-}
-
-/* Card */
-.card {
-  position: relative;
-  background: white;
-  border-radius: 5px;
-  padding: 60px 0 40px 0;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-.card:first-child {
-  background: #fafafa;
-  height: 10px;
-  border-radius: 5px 5px 0 0;
-  margin: 0 10px;
-  padding: 0;
-}
-.card .title {
-  position: relative;
-  border-left: 5px solid #ed2553;
-  margin: 0 0 35px;
-  padding: 10px 0 10px 50px;
-  color: #ed2553;
-  font-size: 32px;
-  text-transform: uppercase;
-}
-.card .input-container {
-  position: relative;
-  margin: 0 60px 50px;
-}
-.card .input-container input {
-  outline: none;
-  z-index: 1;
-  position: relative;
-  background: none;
-  width: 100%;
-  height: 60px;
-  border: 0;
-  color: #212121;
-  font-size: 24px;
-  font-weight: 400;
-}
-.card .input-container input:focus ~ label {
-  color: #9d9d9d;
-  transform: translate(-12%, -50%) scale(0.75);
-}
-.card .input-container input:valid ~ label {
-  color: #9d9d9d;
-  transform: translate(-12%, -50%) scale(0.75);
-}
-.card .input-container label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: #757575;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 60px;
-  transition: 0.2s ease;
-}
-.card .input-container .bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background: gray;
-  width: 100%;
-  height: 1px;
-}
-
-.card .button-container {
-  margin: 0 60px;
-  text-align: center;
-}
-.card .button-container button {
-  outline: 0;
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  background: 0;
-  width: 240px;
-  border: 2px solid #e3e3e3;
-  padding: 20px 0;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
-}
-
-.card .button-container button span {
-  position: relative;
-  z-index: 1;
-  color: lightgray;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-
-.card .button-container button span:hover{
-  color: gray;
-}
-
-.card .footer {
-  margin: 40px 0 0;
-  color: lightgray;
-  font-size: 24px;
-  font-weight: 300;
-  text-align: center;
-}
-.card .footer a {
-  color: inherit;
-  text-decoration: none;
-}
-.card .footer a:hover {
-  color: gray;
-}
-
-/* Card Alt */
-.card.alt {
-  position: absolute;
-  top: 40px;
-  right: -70px;
-  border-radius: 50%;
-  padding: 0;
-}
-.card.alt .toggle {
-  position: relative;
-  background: #ed2553;
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  color: white;
-  font-size: 58px;
-  line-height: 140px;
-  text-align: center;
-}
-
-.card.alt .toggle:before {
-  content: '\f040';
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-}
-
 /* Add conference */
 #add-conference {
-  top: 400px;
+  top: 200px;
   position: absolute;
 }
 
@@ -181,6 +31,30 @@ body {
   margin: 0 60px;
 }
 #add-conference .button-container button {
+  border-radius: 20px;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid gray;
+  padding: 10px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+#add-conference .button-container button span {
+  color: dimgray;
+  transition: .3s ease;
+}
+
+/* Logout */
+#logout {
+  top: 300px;
+  position: absolute;
+}
+
+#logout .button-container {
+  margin: 0 60px;
+}
+#logout .button-container button {
   border-radius: 20px;
   outline: 0;
   cursor: pointer;
