--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="home-title">
-  <h1>Welcome to the Conference</h1>
+  <h1>Welcome Home</h1>
 </div>
 
 <div id="add-conference">
@@ -20,31 +20,9 @@
   </div>
 </div>
 
-
-<div class="container">
-  <div class="card"></div>
-  <div class="card">
-    <h1 class="title">Login</h1>
-    <form>
-      <div class="input-container">
-        <input type="text" id="username" required="required" #username/>
-        <label for="username">Username</label>
-        <div class="bar"></div>
-      </div>
-      <div class="input-container">
-        <input type="password" id="password" required="required" #password/>
-        <label for="password">Password</label>
-        <div class="bar"></div>
-      </div>
-      <div class="button-container">
-        <button type="submit" class="btn btn-primary"><span>Go</span></button>
-      </div>
-      <div (click)="gotoRegister()" class="footer"><a>Don't have an account? Register now</a></div>
-    </form>
-  </div>
-
-  <div class="card alt">
-    <div class="toggle"></div>
+<div id="logout">
+  <div class="button-container">
+    <button (click)="logout()" type="button" class ="btn btn-default">Logout</button>
   </div>
 </div>
 
