--- a/WebConference-web/src/main/webapp/src/app/user/login/login.component.html
+++ b/WebConference-web/src/main/webapp/src/app/user/login/login.component.html
@@ -28,9 +28,9 @@
         <div class="bar"></div>
       </div>
       <div class="button-container">
-        <button type="submit" class="btn btn-primary"><span>Go</span></button>
+        <button type="button" (click)="login(username.value, password.value)"><span>Go</span></button>
       </div>
-      <div class="footer"><a href="#">Forgot your password?</a></div>
+      <div (click)="gotoRegister()" class="footer"><a>Don't have an account? Register now</a></div>
     </form>
   </div>
 
