--- a/WebConference-web/src/main/webapp/src/app/home/home.component.css
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.css
@@ -15,6 +15,7 @@ body {
   text-align: center;
   letter-spacing: 4px;
 }
+
 .home-title h1 {
   margin: 0;
   font-size: 55px;
@@ -30,6 +31,7 @@ body {
 #add-conference .button-container {
   margin: 0 60px;
 }
+
 #add-conference .button-container button {
   border-radius: 20px;
   outline: 0;
@@ -54,6 +56,7 @@ body {
 #logout .button-container {
   margin: 0 60px;
 }
+
 #logout .button-container button {
   border-radius: 20px;
   outline: 0;
@@ -67,4 +70,63 @@ body {
 #add-conference .button-container button span {
   color: dimgray;
   transition: .3s ease;
+}
+
+/*For Nav Bar*/
+
+.custom1 {
+  display: block;
+  cursor: pointer;
+}
+/*Without shade on the screen*/
+/*.off-canvas > .cstm-shade {*/
+  /*width: 0;*/
+  /*height: 0;*/
+  /*position: fixed;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  /*transition: background 0.5s ease, width 0s ease 0.5s, height 0s ease 0.5s;*/
+/*}*/
+
+.off-canvas > input[type="checkbox"] {
+  display: none;
+}
+
+.off-canvas > input[type="checkbox"]:checked ~ .cstm-shade {
+  background: rgba(0, 0, 0, 0.75);
+  width: 100%;
+  height: 100%;
+  transition: background 0.5s ease;
+}
+
+.off-canvas > .cstm-shade > .cstm-navi {
+  background: white;
+  width: 300px;
+  height: 100%;
+  position: fixed;
+  right: -300px;
+  transition: right 0.5s ease;
+}
+
+.off-canvas > input[type="checkbox"]:checked ~ .cstm-shade > .cstm-navi {
+  right: 0;
+}
+
+.cstm-navi-content {
+  padding: 20px;
+  padding-top: 80px;
+}
+
+
+/*.glyphicon{*/
+/*color: #ed2553;*/
+/*}*/
+/*.active*/
+/*{*/
+/*color: #ed2553;*/
+/*}*/
+
+#registerconf
+{
+  display: none;
 }
