--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -1,30 +1,88 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Material Login Form</title>
-  <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+  <link rel='stylesheet prefetch'
+        href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <!--<link rel="stylesheet" href="login.component.css">-->
   <!--<link rel="stylesheet" href="style.css">-->
 </head>
 
 <body>
-<div class="home-title">
-  <h1>Welcome Home</h1>
-</div>
 
-<div id="add-conference">
-  <div class="button-container">
-    <button (click)="gotoRegisterConference()" type="button" class ="btn btn-default">Add Conference</button>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/home">Conference Management</a>
+    <label for="off_canvas" class="navbar-toggle custom1">
+      <!--<span class="sr-only">Toggle navigation</span>-->
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </label>
+  </div>
+</nav>
+
+<div class="off-canvas">
+  <input type="checkbox" id="off_canvas"/>
+  <div class="cstm-shade">
+    <div class="cstm-navi">
+      <div class="cstm-navi-content">
+        <ul class="nav nav-pills nav-stacked">
+          <li role="presentation" class="active">
+            <a href="/home">
+              <span class="glyphicon glyphicon-home"></span>
+              Home
+            </a>
+          </li>
+          <li role="presentation" (click)="gotoRegisterConference()">
+            <a>
+              <span class="glyphicon glyphicon-plus"></span>
+              Add Conference
+            </a>
+          </li>
+          <li role="presentation">
+            <a href="#">
+              <span class="glyphicon glyphicon-user"></span>
+              Profile
+            </a>
+          </li>
+          <li role="presentation" (click)="logout()">
+            <a href="#">
+              <span class="glyphicon glyphicon-off"></span>
+              Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
-<div id="logout">
-  <div class="button-container">
-    <button (click)="logout()" type="button" class ="btn btn-default">Logout</button>
-  </div>
+  <!--<register></register>-->
+<div id="registerconf">
+  <registerconf></registerconf>
 </div>
+
+
+  <!--<div class="off-canvas">-->
+  <!--<div class="home-title">-->
+    <!--<h1>Welcome Home</h1>-->
+  <!--</div>-->
+
+  <!--<div id="add-conference">-->
+    <!--<div class="button-container">-->
+      <!--<button (click)="gotoRegisterConference()" type="button" class="btn btn-default">Add Conference</button>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <!--<div id="logout">-->
+    <!--<div class="button-container">-->
+      <!--<button (click)="logout()" type="button" class="btn btn-default">Logout</button>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
