--- a/WebConference-web/src/main/webapp/src/app/home/home.component.css
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.css
@@ -3,7 +3,7 @@ body {
   color: #666666;
   font-family: 'RobotoDraft', 'Roboto', sans-serif;
   font-size: 14px;
-  height: 950px;
+
 }
 
 /*Title*/
@@ -127,6 +127,10 @@ body {
 /*}*/
 
 #registerconf
+{
+  display: none;
+}
+#register
 {
   display: none;
 }
