--- a/WebConference-web/src/main/webapp/src/app/user/register/register.component.html
+++ b/WebConference-web/src/main/webapp/src/app/user/register/register.component.html
@@ -41,22 +41,22 @@
         <button (click)="register(name.value, username.value, email.value, password.value)"><span>Go</span></button>
       </div>
 
-      <!--<div id="invalid-email" class="alert alert-danger">-->
-        <!--<strong>Invalid email format.</strong>-->
-      <!--</div>-->
-      <!--<div id="invalid-password" class="alert alert-danger">-->
-        <!--<strong>The password should contain at least 6 characters.</strong>-->
-      <!--</div>-->
-      <!--<div id="success">-->
-        <!--<div class="alert alert-success">-->
-          <!--<strong>Your account was successfully created.</strong>-->
-        <!--</div>-->
-        <!--<br>-->
-        <!--<p>Do you want to <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button> right now?</p>-->
-      <!--</div>-->
-      <!--<div id="failure" class="alert alert-danger">-->
-        <!--<strong>This username is already taken. Please choose another one.</strong>-->
-      <!--</div>-->
+      <div id="invalid-email" class="alert alert-danger">
+        <strong>Invalid email format.</strong>
+      </div>
+      <div id="invalid-password" class="alert alert-danger">
+        <strong>The password should contain at least 6 characters.</strong>
+      </div>
+      <div id="success">
+        <div class="alert alert-success">
+          <strong>Your account was successfully created.</strong>
+        </div>
+        <br>
+        <p>Do you want to <button (click)="gotoLogin()" type="button" class="btn btn-default">Login</button> right now?</p>
+      </div>
+      <div id="failure" class="alert alert-danger">
+        <strong>This username is already taken. Please choose another one.</strong>
+      </div>
 
     </form>
   </div>
