--- a/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.css
@@ -1,5 +1,5 @@
 body {
-  background: #e9e9e9;
+  /*background: #e9e9e9;*/
   color: #666666;
   font-family: 'RobotoDraft', 'Roboto', sans-serif;
   font-size: 14px;
@@ -8,6 +8,7 @@ body {
 
 /* Pen Title */
 .pen-title {
+  margin-top: 30px;
   padding: 50px 0;
   text-align: center;
   letter-spacing: 2px;
