--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -32,7 +32,8 @@
       <div class="cstm-navi-content">
         <ul class="nav nav-pills nav-stacked">
           <li role="presentation" class="active" id="bhome">
-            <a href="/home">
+            <!--<a href="/home">-->
+            <a (click)="goTo('/','bhome')">
               <span class="glyphicon glyphicon-home"></span>
               Home
             </a>
@@ -43,8 +44,8 @@
               Add Conference
             </a>
           </li>
-          <li role="presentation">
-            <a (click)="goTo('register')">
+          <li role="presentation" id="bprofile">
+            <a >
               <span class="glyphicon glyphicon-user"></span>
               Profile
             </a>
