--- a/WebConference-web/src/main/webapp/src/app/user/login/login.component.css
+++ b/WebConference-web/src/main/webapp/src/app/user/login/login.component.css
@@ -164,3 +164,7 @@ body {
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
 }
+
+#failure, #failureUserPass {
+  display: none;
+}
