--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -45,7 +45,7 @@
             </a>
           </li>
           <li role="presentation" id="bprofile">
-            <a >
+            <a (click)="goTo('profile','bprofile')">
               <span class="glyphicon glyphicon-user"></span>
               Profile
             </a>
@@ -66,36 +66,11 @@
 <div id="registerconf">
   <registerconf></registerconf>
 </div>
-<div id="register">
-  <register></register>
+
+<div id="profile">
+  <profile></profile>
 </div>
-  <!--<register></register>-->
-
-
-  <!--<div class="off-canvas">-->
-  <!--<div class="home-title">-->
-    <!--<h1>Welcome Home</h1>-->
-  <!--</div>-->
-
-  <!--<div id="add-conference">-->
-    <!--<div class="button-container">-->
-      <!--<button (click)="gotoRegisterConference()" type="button" class="btn btn-default">Add Conference</button>-->
-    <!--</div>-->
-  <!--</div>-->
-
-  <!--<div id="logout">-->
-    <!--<div class="button-container">-->
-      <!--<button (click)="logout()" type="button" class="btn btn-default">Logout</button>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
 </body>
 </html>
-
-
-<!--<div class="checkbox">-->
-<!--<label><input type="checkbox"> Remember me</label>-->
-<!--</div>-->
