--- a/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.html
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.html
@@ -23,12 +23,17 @@
         <div class="bar"></div>
       </div>
       <div class="input-container">
-        <input type="text" id="date"  required="required" #date/>
+        <input type="date" id="date"  required="required" #date/>
         <label for="date">Date</label>
         <div class="bar"></div>
       </div>
+      <div class="input-container">
+        <input type="date" id="deadline" required="required" #deadline/>
+        <label for="deadline">Deadline</label>
+        <div class="bar"></div>
+      </div>
       <div class="button-container">
-        <button (click)="register(name.value, date.value)"><span>Go</span></button>
+        <button (click)="register(name.value, date.value,deadline.value)"><span>Go</span></button>
       </div>
     </form>
   </div>
