--- a/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.html
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.html
@@ -32,6 +32,23 @@
         <label for="deadline">Deadline</label>
         <div class="bar"></div>
       </div>
+      <div id="deadLineWrong" class="alert alert-danger" align="center">
+        <strong>Invalid Deadline!</strong>
+      </div>
+      <div id="required" class="alert alert-danger" align="center">
+        <strong>All fields are required.</strong>
+      </div>
+      <div id="invalid-date" class="alert alert-danger" align="center">
+        <strong>Invalid date format.</strong>
+      </div>
+      <div id="success">
+        <div class="alert alert-success" align="center">
+          <strong>Your conference was successfully created.</strong>
+        </div>
+      </div>
+      <div id="failure" class="alert alert-danger" align="center">
+        <strong>This name is already taken. Please choose another one.</strong>
+      </div>
       <div class="button-container">
         <button (click)="register(name.value, date.value,deadline.value)"><span>Go</span></button>
       </div>
@@ -40,20 +57,6 @@
 
   <div class="card alt">
     <div class="toggle"></div>
-  </div>
-  <div id="required" class="alert alert-danger">
-    <strong>All fields are required.</strong>
-  </div>
-  <div id="invalid-date" class="alert alert-danger">
-    <strong>Invalid date format.</strong>
-  </div>
-  <div id="success">
-    <div class="alert alert-success">
-      <strong>Your conference was successfully created.</strong>
-    </div>
-  </div>
-  <div id="failure" class="alert alert-danger">
-    <strong>This name is already taken. Please choose another one.</strong>
   </div>
 </div>
 
