Changes from catablack

--- a/WebConference-web/src/main/webapp/src/app/app.component.html
+++ b/WebConference-web/src/main/webapp/src/app/app.component.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body>
-  <!--<nav class="navbar navbar-inverse">-->
-    <!--<div class="container-fluid">-->
-      <!--<div class="navbar-header">-->
-        <!--<img src="../../images/logo.png" style="max-height: 65px;">-->
-      <!--</div>-->
-      <!--<div class="collapse navbar-collapse">-->
-        <!--<ul class="nav navbar-nav navbar-right">-->
+<head>
 
-        <!--</ul>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</nav>-->
-  <router-outlet></router-outlet>
+</head>
+<body>
+
+  <router-outlet>
+  </router-outlet>
+
 </body>
 </html>
