--- a/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-register/conference-register.component.css
@@ -65,14 +65,6 @@ body {
   font-size: 24px;
   font-weight: 400;
 }
-/*.card .input-container input:focus ~ label {*/
-  /*color: #9d9d9d;*/
-  /*transform: translate(-12%, -50%) scale(0.75);*/
-/*}*/
-/*.card .input-container input:valid ~ label {*/
-  /*color: #9d9d9d;*/
-  /*transform: translate(-12%, -50%) scale(0.75);*/
-/*}*/
 .card .input-container label {
   position: absolute;
   top: 0;
@@ -146,7 +138,7 @@ body {
 }
 
 .card.alt .toggle:before {
-  content: '\f1a1';
+  content: '\f133';
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
 }
@@ -157,5 +149,3 @@ body {
 #required, #invalid-date, #success, #failure, #deadLineWrong{
   display: none;
 }
-/*input::-webkit-datetime-edit{ color: transparent; }*/
-/*input:focus::-webkit-datetime-edit{ color: gray;}*/
