--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Material Login Form</title>
-  <link rel='stylesheet prefetch'
-        href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
-  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-  <!--<link rel="stylesheet" href="login.component.css">-->
-  <!--<link rel="stylesheet" href="style.css">-->
-</head>
-
-<body>
-
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/home">Conference Management</a>
     <label for="off_canvas" class="navbar-toggle custom1">
-      <!--<span class="sr-only">Toggle navigation</span>-->
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -31,21 +16,20 @@
     <div class="cstm-navi">
       <div class="cstm-navi-content">
         <ul class="nav nav-pills nav-stacked">
-          <li role="presentation" class="active" id="bhome">
-            <!--<a href="/home">-->
-            <a (click)="goTo('/','bhome')">
+          <li role="presentation"  id="bhome">
+            <a href="/home">
               <span class="glyphicon glyphicon-home"></span>
               Home
             </a>
           </li>
           <li role="presentation"  id="bconference">
-            <a (click)="goTo('registerconf','bconference')">
-              <span class="glyphicon glyphicon-plus"></span>
+            <a href="/registerconf">
+            <span class="glyphicon glyphicon-plus"></span>
               Add Conference
             </a>
           </li>
           <li role="presentation" id="bprofile">
-            <a (click)="goTo('profile','bprofile')">
+            <a href="/profile">
               <span class="glyphicon glyphicon-user"></span>
               Profile
             </a>
@@ -63,14 +47,4 @@
 
 </div>
 
-<div id="registerconf">
-  <registerconf></registerconf>
-</div>
 
-<div id="profile">
-  <profile></profile>
-</div>
-
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-</body>
-</html>
