--- a/WebConference-web/src/main/webapp/src/app/user/profile/profile.component.html
+++ b/WebConference-web/src/main/webapp/src/app/user/profile/profile.component.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <meta charset="UTF-8">
   <title>Material Login Form</title>
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 </head>
-
 <body>
-
+<home></home>
 <div class="pen-title">
   <h1>Your Profile</h1>
 </div>
 <div class="container">
   <div class="card"></div>
   <div class="card">
-    <!--<h1 class="title">Register</h1>-->
 
     <form  *ngIf="user" >
       <div class="input-container">
@@ -36,9 +33,6 @@
         <div class="bar"></div>
       </div>
 
-      <!--<div class="button-container">-->
-        <!--<button (click)="register(name.value, username.value, email.value, password.value)"><span>Go</span></button>-->
-      <!--</div>-->
 
     </form>
   </div>
@@ -50,11 +44,6 @@
 </div>
 
 
-
-<!--<ul>-->
-<!--<li>{{user.username}}</li>-->
-<!--</ul>-->
-<!--<p *ngIf="user" > {{user.username}}</p>-->
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body>
 </html>
