--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -28,6 +28,12 @@
               Add Conference
             </a>
           </li>
+          <li role="presentation"  id="lconference">
+            <a href="/listconf">
+              <span class="glyphicon glyphicon-plus"></span>
+              List Conferences
+            </a>
+          </li>
           <li role="presentation" id="bprofile">
             <a href="/profile">
               <span class="glyphicon glyphicon-user"></span>
