Add Reviewer + Attend + Validations + Fixed Login Failure Message Issue

--- a/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.css
@@ -20,6 +20,14 @@ h2{
   text-align: center;
 }
 
-#success, #failure, #required{
+#update-success, #update-failure, #update-required{
+  display: none;
+}
+
+#add-reviewer-success, #add-reviewer-failure, #add-reviewer-required{
+  display: none;
+}
+
+#attend-success, #attend-failure{
   display: none;
 }
