--- a/WebConference-web/src/main/webapp/src/app/conference/conference-list/conference-list.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-list/conference-list.component.css
@@ -27,11 +27,15 @@ body {
 }
 
 /* Card */
-.card {
+.conference {
+  text-align: left;
+  height: 150px;
+  width: 500px;
+  alignment: left;
   position: relative;
   background: white;
   border-radius: 5px;
-  padding: 60px 0 40px 0;
+  padding: 10px 0 10px 50px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 .card:first-child {
