--- a/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.css
@@ -1,24 +1,43 @@
+/*body {*/
+  /*padding-top: 20px;*/
+  /*font-size: 16px;*/
+  /*font-family: "Open Sans",serif;*/
+/*}*/
+
+/*h1 {*/
+  /*font-family: "Abel", Arial, sans-serif;*/
+  /*font-weight: 400;*/
+  /*font-size: 24px;*/
+  /*margin-top: 30px;*/
+/*}*/
+
+/*h2{*/
+  /*font-size: 18px;*/
+  /*font-weight: bold;*/
+/*}*/
+
+/*.title{*/
+  /*text-align: center;*/
+/*}*/
+
 body {
-  padding-top: 20px;
-  font-size: 16px;
-  font-family: "Open Sans",serif;
+  color: #666666;
+  font-family: 'RobotoDraft', 'Roboto', sans-serif;
 }
 
-h1 {
-  font-family: "Abel", Arial, sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  margin-top: 30px;
-}
-
-h2{
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.title{
+.login-title {
+  margin-top: 50px;
+  padding: 0 0 25px 0;
   text-align: center;
+  letter-spacing: 2px;
 }
+
+.login-title h1 {
+  margin-bottom: 20px;
+  font-size: 48px;
+  font-weight: 300;
+}
+
 
 #update-success, #update-failure, #update-required{
   display: none;
