--- a/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.html
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.html
@@ -119,7 +119,7 @@
           <div>
             <h2>Application</h2>
             <button class="btn btn-primary" (click)="attend()">Attend</button>
-            <button class="btn btn-primary">Submit Paper</button>
+            <button class="btn btn-primary" (click)="gotToSubmit()">Submit Paper</button>
             <p><br>Please apply by {{conference.deadline}} .</p>
             <div id="attend-success" class="alert alert-success" align="center">
               <strong>You are now attending this conference.</strong>
