Linking PaperList to conferenceOwner

--- a/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.html
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.html
@@ -62,6 +62,9 @@
                   <div id="update-required" class="alert alert-danger" align="center">
                     <strong>All the fields are required.</strong>
                   </div>
+                  <button class="btn btn-primary"
+                          (click)="goToPapers()">See Papers
+                  </button>
                 </form>
               </div>
             </div>
