--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -33,6 +33,12 @@
               List Conferences
             </a>
           </li>
+          <li role="presentation" id="lpapers">
+            <a (click)="goToPaperView()">
+              <span class="glyphicon glyphicon-plus"></span>
+              List My Papers
+            </a>
+          </li>
           <li role="presentation" id="bprofile">
             <a href="/profile">
               <span class="glyphicon glyphicon-user"></span>
